# Basic-GPQA

./: .env.example  .gitignore  README.md  legal_chrono_eval_report.html  main.py  pyproject.toml  results_1.jsonl  results_2.jsonl  results_3.jsonl  results_4.jsonl  results_5.jsonl  results_summary.jsonl
datagen/: client.py  main.py  prompts.py  types.py
datagen/legal_matter/: __init__.py  __main__.py  backends.py  gdpval_export.py  generator.py  io.py  prompts.py  repair.py  types.py  upload.py  validator.py
eval/: README.md  client.py  gdpqa.py  gpqa.py  legal_chrono.py  types.py  utils.py
results/: legal_chrono_arcee-ai_trinity-mini_20260623_231053.jsonl  legal_chrono_arcee-ai_trinity-mini_20260623_231053_summary.json  legal_chrono_openai_gpt-5.4-mini_20260623_230052.jsonl  legal_chrono_openai_gpt-5.4-mini_20260623_230052_summary.json  legal_chrono_openai_gpt-5.4-nano_20260623_225712.jsonl  legal_chrono_openai_gpt-5.4-nano_20260623_225712_summary.json  legal_chrono_openai_gpt-5.4_20260623_225040.jsonl  legal_chrono_openai_gpt-5.4_20260623_225040_summary.json  legal_chrono_qwen_qwen3.7-plus_20260623_230757.jsonl  legal_chrono_qwen_qwen3.7-plus_20260623_230757_summary.json  legal_chrono_summary.jsonl  legal_chrono_x-ai_grok-4.20-multi-agent_20260623_230919.jsonl  legal_chrono_x-ai_grok-4.20-multi-agent_20260623_230919_summary.json  results_google_gemini-3.1-flash-lite.jsonl  results_openai_gpt-5.4-mini.jsonl  results_openai_gpt-5.4-nano.jsonl
tests/: test_legal_chrono_eval.py  test_legal_matter.py
