[project]
name = "gpqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "huggingface-hub>=1.18.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.107.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
